# oralces

./: Anchor.toml  LICENSE  PRD.md  README.md  package-lock.json  package.json  rebuild.sh  recovered-keypair.json
programs/oracles/: Cargo.toml
programs/oracles/src/: config.rs  lib.rs  models.rs  price_oracle.rs  switchboard_utils.rs  types.rs
tests/: price_oracle.ts
