[package]
name = "oracles"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
switchboard-v2 = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1.13.1"
rust_decimal = "1.26.1"
solana-program = { version = ">=1.16, <1.17" }
superslice = "1"